client/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krmarket-frontend
  namespace: krmarket
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: krmarket
    app.kubernetes.io/component: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: krmarket
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: frontend
          image: ashwinsai22/kr-market-client:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
