client/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krmarket-frontend-ingress
  namespace: krmarket
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/x-forwarded-proto: "https"

    nginx.ingress.kubernetes.io/configuration-snippet: |
      try_files $uri $uri/ /index.html;
spec:
  ingressClassName: public
  rules:
  - host: krmarket.bezawada.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: krmarket-frontend
            port:
              number: 80
